- List Fetch from Firebase Storage - In Exo player video play and Picture In Picture mode added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:launchMode="singleTask"
+            android:name=".VideoPlayActivity"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
+            android:exported="false"
+            android:supportsPictureInPicture="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
